--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,10 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>크리스마스 트리</title>
-  <link rel="icon" href="../src/assets/tree.ico" type="image/x-icon">
-  <link rel="stylesheet" href="../src/styles/snowflake.css">
-  <link rel="stylesheet" href="../src/styles/backGround.css">
-  <link rel="stylesheet" href="../src/styles/snowButton.css">
-  <script type="module" src="../dist/app.js"></script>
+  <title>케인인님의 패션 분석</title>
+  <link rel="icon" href="../src/assets/joyakdol.ico" type="image/x-icon">
 </head>
 <body>
-  <button id="snowButton">
-    <span id="span">Snow Off</span>
-  </button>
-  <div class="tree"><img src="../src/assets/tree.png" alt="크리스마스 트리" width="500" height="500"></div>
+  <h1>테스트</h1>
 </body>
 </html>
