--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
   <h1>테스트</h1>
   <p>난 학교가 싫어요 집에 보내줘 ㅅ@ㅂ!!!!</p>
-  <button onclick="alert('어쩌라고요')"></button>
+  <button onclick="alert('어쩌라고요')">학교가 싫을 때 누르는 버튼</button>
 </body>
 </html>
