--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>기과 과제</title>
+  <title>기가 과제</title>
   <link rel="icon" href="./joyakdol.ico" type="image/x-icon">
 </head>
 <body>
-  <h1>테스트</h1>
   <div id="root"></div>
 </body>
 </html>
