--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>기가 과제</title>
+  <title>테스트</title>
   <link rel="icon" href="./joyakdol.ico" type="image/x-icon">
 <script defer src="bundle.js"></script></head>
 <body>
